# seq-input-syslog

./: .gitignore  Cargo.toml  README.md  Seq.Input.Syslog.nuspec  appveyor.yml  docker-publish.ps1  rustfmt.toml  seq-input-syslog.d.json
.cargo/: config
ci/: build-deps.ps1
ci/linux-x64/: build.ps1  setup.sh
ci/smoke-test/app/: Dockerfile
ci/win-x64/: build.ps1  setup.ps1
dockerfiles/: Dockerfile  run.sh
squiflog/: Cargo.toml
squiflog/src/: clef.rs  config.rs  diagnostics.rs  error.rs  lib.rs  main.rs  syslog.rs  test_util.rs
squiflog/src/data/: clef.rs  mod.rs  parsers.rs  syslog.rs
squiflog/src/server/: mod.rs  udp.rs
