[package]
name = "squiflog"
version = "0.0.0"
authors = ["Datalust"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
inlinable_string = "0.1"
string_cache = "0.8"
bytes = "1"
lazy_static = "1.4"
libflate = "0.1"

[dependencies.chrono]
 version = "0.4"
 features = ["serde"]

[dependencies.futures]
version = "0.3"

[dependencies.pin-utils]
version = "0.1.0-alpha.4"

[dependencies.tokio]
version = "1"
features = ["signal", "sync", "net", "time", "rt", "rt-multi-thread"]

[dependencies.tokio-util]
version = "0.6"
features = ["codec", "net"]
